MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>