MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Visitor_Email__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Email__c</fullName>
    <label>Visitor Email</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>