MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Visitor_Email_Search__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Email_Search__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visitor Email Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>