MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Visitor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Visitor_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visitor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>