MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Visitor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Phone__c</fullName>
    <label>Visitor Phone</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>