MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Visitor_Phone_Search__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Phone_Search__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visitor Phone Search</label>
    <length>25</length>
    <type>Text</type>
</CustomField>