MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Whats_App_Customer_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Whats_App_Customer_Delivery_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Whats App Customer Delivery Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>