MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Whats_App_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Whats_App_Integration_Status__c</fullName>
    <label>Whats App Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Target Inserted</fullName>
            </value>
            <value>
                <fullName>Customer Responded</fullName>
            </value>
            <value>
                <fullName>Customer Journey Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>