MODON MRE BPDEV/force-app/main/default/objects/Case/recordTypes/Broker_Cases.recordType-meta.xml
<RecordType>
    <fullName>Broker_Cases</fullName>
    <active>true</active>
    <businessProcess>Case Module For Broker Management</businessProcess>
    <description>This record type handles all broker account related cases</description>
    <label>Broker Cases</label>
</RecordType>