MODON MRE BPDEV/force-app/main/default/objects/Case/recordTypes/Service_Cases.recordType-meta.xml
<RecordType>
    <fullName>Service_Cases</fullName>
    <active>true</active>
    <businessProcess>Case Module For Broker Management</businessProcess>
    <description>The default record type for the cases</description>
    <label>Service Cases</label>
</RecordType>