MODON MRE BPDEV/force-app/main/default/objects/Case/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <businessProcess>Case Module For Broker Management</businessProcess>
    <description>Standard Record Type for Call Centre Team</description>
    <label>Standard</label>
</RecordType>