MODON MRE BPDEV/force-app/main/default/objects/Case/recordTypes/Web_Cases.recordType-meta.xml
<RecordType>
    <fullName>Web_Cases</fullName>
    <active>true</active>
    <businessProcess>Case Module For Broker Management</businessProcess>
    <description>This record type handles all web related cases</description>
    <label>Web Cases</label>
</RecordType>