MODON MRE BPDEV/force-app/main/default/objects/Case/recordTypes/X800_Modon_Cases.recordType-meta.xml
<RecordType>
    <fullName>X800_Modon_Cases</fullName>
    <active>true</active>
    <businessProcess>Case Module For Broker Management</businessProcess>
    <description>This record type handles all 800 Modon cases</description>
    <label>800 Modon Cases</label>
</RecordType>