MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Agent_Name_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_Name_is_mandatory</fullName>
    <active>true</active>
    <description>Please provide agent name</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    TEXT(Complaint_Classification__c) = &apos;Person&apos;,
    Unidentified_User__c == false,
    ISBLANK(Employee_Name__c)
)
)</errorConditionFormula>
    <errorDisplayField>Employee_Name__c</errorDisplayField>
    <errorMessage>Please provide agent name</errorMessage>
</ValidationRule>