MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/BrokerEnquiry_CloseStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BrokerEnquiry_CloseStatusCheck</fullName>
    <active>false</active>
    <description>Please select subcategory for Broker Enquiry</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    NOT(ISNEW()),
    ISPICKVAL(CaseCategory__c, &apos;Broker Enquiry&apos;),
    ISPICKVAL( Status , &apos;Closed With Service Request&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>CaseSubCategory__c</errorDisplayField>
    <errorMessage>Please select subcategory for Broker Enquiry</errorMessage>
</ValidationRule>