MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/BrokerEnquiry_SubCategory_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BrokerEnquiry_SubCategory_Required</fullName>
    <active>false</active>
    <description>Please select subcategory for Broker Enquiry</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    NOT(ISNEW()),
    ISPICKVAL(CaseCategory__c, &apos;Broker Enquiry&apos;),
    ISBLANK(TEXT(CaseSubCategory__c))
)

/*

AND(
    NOT(ISNEW()),
    ISPICKVAL(CaseCategory__c, &apos;Broker Enquiry&apos;),
    NOT(ISPICKVAL(Status, &apos;Closed with Resolution&apos;)),
    NOT(ISPICKVAL(Status, &apos;Closed without Resolution&apos;)),
    NOT(ISPICKVAL(Status, &apos;Closed with Service Request&apos;)),
    NOT(ISPICKVAL(Status, &apos;Closed as Duplicate&apos;)),
    ISBLANK(TEXT(CaseSubCategory__c))
)

*/
)</errorConditionFormula>
    <errorDisplayField>CaseSubCategory__c</errorDisplayField>
    <errorMessage>Please select subcategory for Broker Enquiry</errorMessage>
</ValidationRule>