MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Can_Edit_Case_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Edit_Case_Owner</fullName>
    <active>false</active>
    <description>You do not have permission to update case owner. Please contact your administrator.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    ISCHANGED(New_Owner__c),
    NOT($Permission.Change_Owner)
)
)</errorConditionFormula>
    <errorDisplayField>New_Owner__c</errorDisplayField>
    <errorMessage>You do not have permission to update case owner. Please contact your administrator.</errorMessage>
</ValidationRule>