MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Cannot_open_closed_cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_open_closed_cases</fullName>
    <active>true</active>
    <description>Opening a closed case is not allowed.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
        ISCHANGED(Status),
        ISPICKVAL(PRIORVALUE(Status), &quot;Closed&quot;),
        NOT(ISPICKVAL(Status, &quot;Closed&quot;)),
        $Profile.Name &lt;&gt; &quot;System Administrator&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Opening a closed case is not allowed.</errorMessage>
</ValidationRule>