MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Case_Owner_Needed_To_Close_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Owner_Needed_To_Close_Case</fullName>
    <active>true</active>
    <description>Please assign owner before closing the case</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    ISPICKVAL(Status, &quot;Closed&quot;),
    ISBLANK(New_Owner__c)
)
)</errorConditionFormula>
    <errorDisplayField>New_Owner__c</errorDisplayField>
    <errorMessage>Please assign owner before closing the case</errorMessage>
</ValidationRule>