MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Case_Validation_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Validation_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Requestor_Name__c = &quot;Test&quot;,
ISPICKVAL(Channel__c, &quot;Websites&quot;),
ISPICKVAL(Source__c, &quot;Modon.com&quot;)
)</errorConditionFormula>
    <errorMessage>Case creation is restricted for this Requestor, Channel, and Source combination.</errorMessage>
</ValidationRule>