MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClose_CommentsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClose_CommentsRequired</fullName>
    <active>true</active>
    <description>Please provide closing comments for the resolved case</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISBLANK(Resolution_Comments__c),
ISPICKVAL(Status, &apos;Closed&apos;),
ISPICKVAL(Sub_Status__c , &apos;Resolved&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Resolution_Comments__c</errorDisplayField>
    <errorMessage>Please provide closing comments for the resolved case</errorMessage>
</ValidationRule>