MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClose_DepartmentAction.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClose_DepartmentAction</fullName>
    <active>false</active>
    <description>Department Action cases should be Closed with Resolution status.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISPICKVAL(CaseCategory__c, &apos;Department Action&apos;),
NOT(ISPICKVAL(Status,&apos;New&apos;)),
NOT(ISPICKVAL(Status,&apos;In Progress&apos;)),
ISBLANK(ParentId),
NOT(ISPICKVAL(Status,&apos;Closed with Resolution&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Department Action cases should be Closed with Resolution status.</errorMessage>
</ValidationRule>