MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClose_ServiceRequest.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClose_ServiceRequest</fullName>
    <active>false</active>
    <description>Service Request cases should be Closed with Service Request status.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISPICKVAL(CaseCategory__c, &apos;Service Request&apos;),
NOT(ISPICKVAL(Status,&apos;New&apos;)),
NOT(ISPICKVAL(Status,&apos;In Progress&apos;)),
ISBLANK(ParentId),
NOT(ISPICKVAL(Status,&apos;Closed with Service Request&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Service Request cases should be Closed with Service Request status.</errorMessage>
</ValidationRule>