MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClosed_ClosedasDuplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClosed_ClosedasDuplicate</fullName>
    <active>false</active>
    <description>Closed as Duplicate cases cannot be Closed with Service Request.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISPICKVAL(CaseCategory__c, &apos;Closed as Duplicate&apos;),
NOT(ISPICKVAL(Status,&apos;New&apos;)),
NOT(ISPICKVAL(Status,&apos;In Progress&apos;)),
ISBLANK(ParentId),
NOT(ISPICKVAL(Status,&apos;Closed with Resolution&apos;)),
NOT(ISPICKVAL(Status,&apos;Closed without Resolution&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Closed as Duplicate cases cannot be Closed with Service Request.</errorMessage>
</ValidationRule>