MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClosed_GeneralEnquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClosed_GeneralEnquiry</fullName>
    <active>false</active>
    <description>General Enquiry cases can be Closed with Resolution or Closed without Resolution.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISPICKVAL(CaseCategory__c, &apos;General Enquiry&apos;),
NOT(ISPICKVAL(Status,&apos;New&apos;)),
NOT(ISPICKVAL(Status,&apos;In Progress&apos;)),
ISBLANK(ParentId),
NOT(ISPICKVAL(Status,&apos;Pending With Customer&apos;)),
NOT(ISPICKVAL(Status,&apos;Pending With Other Department&apos;)),
NOT(ISPICKVAL(Status,&apos;Escalated&apos;)),				
NOT(ISPICKVAL(Status,&apos;Closed with Resolution&apos;)),
NOT(ISPICKVAL(Status,&apos;Closed without Resolution&apos;))		
)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>General Enquiry cases can be Closed with Resolution or Closed without Resolution.</errorMessage>
</ValidationRule>