MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClosed_KYCUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClosed_KYCUpdate</fullName>
    <active>false</active>
    <description>KYC Update cases can be Closed with Resolution or Closed without Resolution.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISPICKVAL(CaseCategory__c, &apos;KYC Update&apos;),
NOT(ISPICKVAL(Status,&apos;New&apos;)),
NOT(ISPICKVAL(Status,&apos;In Progress&apos;)),
ISBLANK(ParentId),
NOT(ISPICKVAL(Status,&apos;Closed with Resolution&apos;)),
NOT(ISPICKVAL(Status,&apos;Closed without Resolution&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>KYC Update cases can be Closed with Resolution or Closed without Resolution.</errorMessage>
</ValidationRule>