MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseClosed_SR_SRNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseClosed_SR_SRNumberRequired</fullName>
    <active>false</active>
    <description>SR Number is required for Closed with Service Request.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
ISPICKVAL(Status, &quot;Closed with Service Request&quot;),
ISBLANK(SR_Number__c)
)
)</errorConditionFormula>
    <errorDisplayField>SR_Number__c</errorDisplayField>
    <errorMessage>SR Number is required for Closed with Service Request.</errorMessage>
</ValidationRule>