MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CaseSubCategoryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseSubCategoryRequired</fullName>
    <active>false</active>
    <description>Please select the subcategory.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    OR(
        ISPICKVAL(CaseCategory__c, &apos;Department Action&apos;),
        ISPICKVAL(CaseCategory__c, &apos;Service Request&apos;)
    ),
    ISBLANK(TEXT(CaseSubCategory__c))
)
)</errorConditionFormula>
    <errorDisplayField>CaseSubCategory__c</errorDisplayField>
    <errorMessage>Please select the subcategory.</errorMessage>
</ValidationRule>