MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Category_Change_Not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Change_Not_allowed</fullName>
    <active>false</active>
    <description>Category change is not allowed. Please close this case and create a new case.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND
(ISCHANGED(  CaseCategory__c),
$Profile.Name &lt;&gt; &apos;Call Center Super Manager&apos;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)
)</errorConditionFormula>
    <errorDisplayField>CaseCategory__c</errorDisplayField>
    <errorMessage>Category change is not allowed. Please close this case and create a new case.</errorMessage>
</ValidationRule>