MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Change_not_allowed_on_closed_cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_not_allowed_on_closed_cases</fullName>
    <active>true</active>
    <description>Change not allowed on closed cases</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;Closed&quot;),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    $Profile.Name &lt;&gt; &quot;System Administrator Active Minds&quot;,
    
    OR(
        NOT(ISCHANGED(Last_Updated_Activity__c)),
        NOT(ISCHANGED(Last_Activity_Date__c))
    )
)
)</errorConditionFormula>
    <errorMessage>Change not allowed on closed cases</errorMessage>
</ValidationRule>