MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Channel_cannot_be_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_cannot_be_updated</fullName>
    <active>true</active>
    <description>Channel cannot be updated.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    NOT(ISNEW()),
    ISCHANGED(Channel__c)
)
)</errorConditionFormula>
    <errorDisplayField>Channel__c</errorDisplayField>
    <errorMessage>Channel cannot be updated.</errorMessage>
</ValidationRule>