MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Complaint_Cases_cannot_be_FCR.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_Cases_cannot_be_FCR</fullName>
    <active>true</active>
    <description>Complaint Cases cannot be FCR</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    ISPICKVAL(CaseType__c, &quot;Complaint&quot;),
    FCR__c
)
)</errorConditionFormula>
    <errorDisplayField>FCR__c</errorDisplayField>
    <errorMessage>Complaint Cases cannot be FCR</errorMessage>
</ValidationRule>