MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Complaint_Details_are_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_Details_are_needed</fullName>
    <active>true</active>
    <description>Complaint Details are needed</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    NOT(ISBLANK(TEXT(Complaint_Classification__c))),
    ISBLANK(Complaint_Details__c)
)
)</errorConditionFormula>
    <errorDisplayField>Complaint_Details__c</errorDisplayField>
    <errorMessage>Complaint Details are needed</errorMessage>
</ValidationRule>