MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Contact_Details_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Details_Needed</fullName>
    <active>false</active>
    <description>Please provide either phone, email address or select contact details.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(IsBlank( Requestor_Email__c ),IsBlank( Requestor_Phone__c ), IsBlank(ContactId))
)</errorConditionFormula>
    <errorMessage>Please provide either phone, email address or select contact details.</errorMessage>
</ValidationRule>