MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Contact_Phone_Number_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Phone_Number_format</fullName>
    <active>false</active>
    <description>Please provide valid phone number.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    NOT(ISNULL(Requestor_Phone__c)),
    NOT(REGEX(Requestor_Phone__c, &quot;^\\+(?:[0-9]\\ {0,1}){6,14}[0-9]$&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Requestor_Phone__c</errorDisplayField>
    <errorMessage>Please provide valid phone number 1234567</errorMessage>
</ValidationRule>