MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/ContactOrEmailIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactOrEmailIsRequired</fullName>
    <active>false</active>
    <description>Please select a contact or provide valid email and phone number for communication.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    OR(IsBlank(ContactId),
AND(IsBlank( Requestor_Email__c ),IsBlank( Requestor_Phone__c ))
)
)</errorConditionFormula>
    <errorMessage>Please select a contact or provide valid email and phone number for communication.</errorMessage>
</ValidationRule>