MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CustomerComments_cannot_be_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerComments_cannot_be_updated</fullName>
    <active>true</active>
    <description>Customer Comments cannot be updated for integration cases. Refer to channel for integration source.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND
(
NOT(ISNEW()),
ISCHANGED(Customer_Comments__c),
NOT(ISPICKVAL(Channel__c,&apos;Call&apos;)),
NOT(ISPICKVAL(Channel__c,&apos;Walk-in&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>Customer_Comments__c</errorDisplayField>
    <errorMessage>Customer Comments cannot be updated for integration cases. Refer to channel for integration source.</errorMessage>
</ValidationRule>