MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CustomerData_Not_Needed_for_Visitor.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerData_Not_Needed_for_Visitor</fullName>
    <active>false</active>
    <description>Customer Information not needed for Visitor cases. Please clear details in Customer Information section.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
TEXT(Customer_Type__c) = &apos;Visitor&apos;,
OR(
NOT(ISBLANK(Account_Name__c)),
NOT(ISBLANK(ContactId)),
NOT(ISBLANK(Requestor_Email__c)),
NOT(ISBLANK(Requestor_Name__c)),
NOT(ISBLANK(Requestor_Phone__c)),
NOT(ISBLANK(Unit__c))
)
)
)</errorConditionFormula>
    <errorMessage>Customer Information not needed for Visitor cases. Please clear details in Customer Information section.</errorMessage>
</ValidationRule>