MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CustomerPhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerPhoneValidation</fullName>
    <active>false</active>
    <description>Customer Phone Should be only 10 digits and should start with 971 and No symbols or alphabets allowed.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Customer_Phone__c)),
NOT(
REGEX(
Customer_Phone__c,
&quot;^(\\+971[0-9]{9}|[0-9]{9})$&quot;
)
)
)</errorConditionFormula>
    <errorDisplayField>Customer_Phone__c</errorDisplayField>
    <errorMessage>The Phone Format Should be +971xxxxxxxxx or xxxxxxxxx And No Alphabets Included</errorMessage>
</ValidationRule>