MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/CustomerUnitRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerUnitRequired</fullName>
    <active>false</active>
    <description>Unit details required for customer cases</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND
(NOT(ISPICKVAL( CaseType__c ,&quot;Visitor Case&quot;)),
NOT(ISPICKVAL( CaseCategory__c , &quot;General Enquiry&quot;)),
ISBLANK( Unit__c )
)
)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Unit details required for customer cases</errorMessage>
</ValidationRule>