MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>false</active>
    <description>Please provide description.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    ISBLANK(Description)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please provide description.</errorMessage>
</ValidationRule>