MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Duplicate_Case_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Case_Category</fullName>
    <active>true</active>
    <description>You are not authorized to use Duplicate Case category.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    ISPICKVAL(CaseCategory__c, &quot;Duplicate Case&quot;),
    NOT(
        OR(
            $Profile.Name = &quot;System Administrator&quot;,
            $Profile.Name = &quot;Call Center Super Manager&quot;
        )
    )
)
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>You are not authorized to use Duplicate Case category.</errorMessage>
</ValidationRule>