MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Emirates_Id_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_Id_Format</fullName>
    <active>false</active>
    <description>Invalid Emirates ID format. Please ensure the ID follows the format 000-0000-0000000-0 and contains only numbers.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND( NOT(ISBLANK(Emirates_Id__c)), NOT(REGEX(Emirates_Id__c, &quot;^[0-9]{3}-[0-9]{4}-[0-9]{7}-[0-9]{1}$&quot;)) )
)</errorConditionFormula>
    <errorDisplayField>Emirates_Id__c</errorDisplayField>
    <errorMessage>Invalid Emirates ID format. Please ensure the ID follows the format 000-0000-0000000-0 and contains only numbers.</errorMessage>
</ValidationRule>