MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/Emirates_Id_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_Id_Number_Format</fullName>
    <active>false</active>
    <description>Emirates Id Number should be in the format: 784-xxxx-xxxxxxx-x</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    NOT(ISBLANK(Emirates_Id__c))
&amp;&amp;
NOT(REGEX(Emirates_Id__c, &quot;^(784)-[0-9]{4}-[0-9]{7}-[0-9]{1}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Emirates_Id__c</errorDisplayField>
    <errorMessage>Emirates Id Number should be in the format: 784-xxxx-xxxxxxx-x</errorMessage>
</ValidationRule>