MODON MRE BPDEV/force-app/main/default/objects/Case/validationRules/FCR_not_allowed_during_case_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>FCR_not_allowed_during_case_creation</fullName>
    <active>true</active>
    <description>FCR is not allowed during case creation. Please choose after the case is created.</description>
    <errorConditionFormula>AND(
    NOT($Setup.Case_Validation_Bypass__c.Bypass_Validation__c),
    AND(
    ISNEW(),
    FCR__c = TRUE
)
)</errorConditionFormula>
    <errorDisplayField>FCR__c</errorDisplayField>
    <errorMessage>FCR is not allowed during case creation. Please choose after the case is created.</errorMessage>
</ValidationRule>